fix some layout issues, change search functionality

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -75,7 +75,7 @@ a {
   flex-direction: column;
   // align-items: center;
   // margin: 0 auto;
-
+  margin-bottom: 5%;
 }
 
 .search-block {
@@ -116,17 +116,17 @@ a {
   color: $offline-bg;
 }
 
-#app-container input {
+#search-box {
   background-color: $main-text-color;
   color: $app-color;
   margin: 0 auto;
   /* round corners */
-  border-radius: 15px;
+  border-radius: 20px;
   font-size: 1.2em;
   text-align: center;
   outline: none;
   border: none;
-  padding: 1% 3%;
+  padding: 2% 3%;
 }
 
 #app-container input::-webkit-input-placeholder {
@@ -148,13 +148,16 @@ a {
   background-color: $alt-app-color;
   display: flex;
   // align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: row;
 }
 
 .filter-button {
-  flex-grow: 1;
-  margin: 0 50%;
+  background-color: $offline-bg;
+  flex: 1;
+  width: auto;
+  padding: 0 10px;
+  // margin: 0 50%;
 }
 
 .active-state {
@@ -166,12 +169,14 @@ a {
 }
 
 #results-line {
-  width: 50%;
-  background-color: red;
+  width: 60%;
+  background-color: $app-color;
   display: block;
-  height: 1px;
+  height: 5px;
   border: 3;
-  border-top: 1px solid #ccc;
+  border-radius: 5px;
+  border-top: 1px solid;
+  border-color: $offline-bg;
   // margin: 1em 0;
   // padding: 0;
 }
